ajout de la fonctionnalité pour check si la cateogry existe en base
